--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -8,20 +8,12 @@
              
              x:Class="Marthas_Coffee_App_Movil.MainPage"
             
-             xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls" android:TabbedPage.ToolbarPlacement="Bottom"
+             xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls" android:TabbedPage.ToolbarPlacement="Bottom">
 
-             BarBackgroundColor="#6A4512"
+    <Pages:Inicio/>
 
-             BarTextColor="#FFFFFF"
-             
-             UnselectedTabColor="#D38B1A"
-             
-             SelectedTabColor="#6D6C6C">
+    <Pages:Pedido/>
 
-    <Pages:Inicio BackgroundColor="#6A4512"/>
-
-    <Pages:Pedido BackgroundColor="#6A4512"/>
-
-    <Pages:Cuenta BackgroundColor="#6A4512"/>
+    <Pages:Cuenta/>
 
 </TabbedPage>
