--- a/Pages/Bocadillos.xaml
+++ b/Pages/Bocadillos.xaml
@@ -8,7 +8,7 @@
 
     <!-- Definimos el color de fondo de nuestra pagina -->
 
-    <VerticalStackLayout Padding="5,5,5,5" BackgroundColor="#6A4512" >
+    <VerticalStackLayout Padding="5,5,5,5">
 
 
         <!-- Definimos la orientacion y el margin de nuestro VerticalStackLayout -->
@@ -17,17 +17,11 @@
 
             <HorizontalStackLayout>
 
-                <Button Clicked="RegresoInicio_Clicked" FontFamily="raleway-boldf" x:Name="RegeresoInicio" TextColor="White" BackgroundColor="#D38B1A" Margin="10,10,10,10" Text="←" HeightRequest="50" WidthRequest="50" CornerRadius="60" FontAttributes="Bold" />
+                    <Button Clicked="RegresoInicio_Clicked" x:Name="RegeresoInicio"  Margin="10,10,10,10" Text="↩"  FontSize="20" VerticalOptions="Center" CornerRadius="60" FontAttributes="Bold" />
 
+                    <!-- Agregamos un label y definimos su color,fuente,tamaño,su margen,orientacion, sus atributos, y su propiedad text -->
 
-
-                <!-- Agregamos nuestro logo y definimos su tamaño -->
-
-                <Image Source="logo.png" HeightRequest="90" WidthRequest="90"/>
-
-                <!-- Agregamos un label y definimos su color,fuente,tamaño,su margen,orientacion, sus atributos, y su propiedad text -->
-
-                <Label TextColor="#FFFFFF"  FontFamily="raleway-boldf" FontSize="30"  Margin="5,2,0,0" VerticalOptions="Center" HeightRequest="35" FontAttributes="Bold" Text="Bocadillos"/>
+                <Label FontSize="30"  Margin="5,2,0,0" VerticalOptions="Center" HeightRequest="35" FontAttributes="Bold" Text="Bocadillos"/>
 
             </HorizontalStackLayout>
 
@@ -39,7 +33,7 @@
 
             <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
 
-            <Label TextColor="#FFFFFF" FontSize="20" FontAttributes="Bold" Text="Dulces" />
+            <Label FontSize="20" FontAttributes="Bold" Text="Dulces" />
 
         </VerticalStackLayout>
 
@@ -73,13 +67,13 @@
 
             <HorizontalStackLayout>
 
-                <Label TextColor="#FFFFFF" FontSize="10" Text="Bocadillo 1"  Margin="0,0,42,0" FontAttributes="Bold"/>
+                <Label FontSize="10" Text="Bocadillo 1"  Margin="0,0,42,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="Bocadillo 2"  Margin="0,0,30,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Bocadillo 2"  Margin="0,0,30,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="Bocadillo 3"  Margin="7,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Bocadillo 3"  Margin="7,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="Bocadillo 4"  Margin="45,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Bocadillo 4"  Margin="45,0,0,0" FontAttributes="Bold"/>
 
             </HorizontalStackLayout>
 
@@ -89,21 +83,21 @@
 
             <HorizontalStackLayout>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
             </HorizontalStackLayout>
 
@@ -113,7 +107,7 @@
 
             <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
 
-            <Label TextColor="#FFFFFF" FontSize="20" FontAttributes="Bold" Text="Salados" />
+            <Label FontSize="20" FontAttributes="Bold" Text="Salados" />
 
         </VerticalStackLayout>
 
@@ -137,13 +131,13 @@
 
             <HorizontalStackLayout>
 
-                <Label TextColor="#FFFFFF"  FontSize="10" Text="Bocadillo 1"  Margin="0,0,42,0" FontAttributes="Bold"/>
+                <Label FontSize="10" Text="Bocadillo 1"  Margin="0,0,42,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Bocadillo 2"  Margin="0,0,30,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Bocadillo 2"  Margin="0,0,30,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Bocadillo 3"  Margin="7,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Bocadillo 3"  Margin="7,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Bocadillo 4"  Margin="45,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Bocadillo 4"  Margin="45,0,0,0" FontAttributes="Bold"/>
 
             </HorizontalStackLayout>
 
@@ -153,21 +147,21 @@
 
             <HorizontalStackLayout>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
             </HorizontalStackLayout>
 
@@ -177,7 +171,7 @@
 
             <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
 
-            <Label TextColor="#FFFFFF" FontSize="20" FontAttributes="Bold" Text="Acidos" />
+            <Label FontSize="20" FontAttributes="Bold" Text="Acidos" />
 
         </VerticalStackLayout>
 
@@ -201,13 +195,13 @@
 
             <HorizontalStackLayout>
 
-                <Label TextColor="#FFFFFF"  FontSize="10" Text="Bocadillo 1"  Margin="0,0,42,0" FontAttributes="Bold"/>
+                <Label FontSize="10" Text="Bocadillo 1"  Margin="0,0,42,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Bocadillo 2"  Margin="0,0,30,0" FontAttributes="Bold" />
+                <Label FontSize="10"  Text="Bocadillo 2"  Margin="0,0,30,0" FontAttributes="Bold" />
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Bocadillo 3"  Margin="7,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Bocadillo 3"  Margin="7,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Bocadillo 4"  Margin="45,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Bocadillo 4"  Margin="45,0,0,0" FontAttributes="Bold"/>
 
             </HorizontalStackLayout>
 
@@ -217,21 +211,21 @@
 
             <HorizontalStackLayout>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
 
             </HorizontalStackLayout>
 
@@ -241,13 +235,13 @@
 
             <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Margin="0,40,0,0">
 
-                <Button FontFamily="raleway-boldf" x:Name="Orden" TextColor="White" BackgroundColor="#D38B1A" Margin="10,10,10,10" Text="AGREGAR A LA ORDEN" HeightRequest="45" WidthRequest="190" CornerRadius="30"/>
+                <Button FontFamily="raleway-boldf" x:Name="Orden"  Margin="10,10,10,10" Text="AGREGAR A LA ORDEN" HeightRequest="45" WidthRequest="190" CornerRadius="30"/>
 
-                <Button FontFamily="raleway-boldf" x:Name="Mas" TextColor="White" BackgroundColor="#D38B1A" Margin="0,0,0,0" Text="+" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
+                <Button FontFamily="raleway-boldf" x:Name="Mas" Margin="0,0,0,0" Text="+" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
 
-                <Label Margin="10,0,10,0" HorizontalOptions="Center" TextColor="#FFFFFF" VerticalOptions="Center" Text="0" FontAttributes="Bold"/>
+                <Label Margin="10,0,10,0" HorizontalOptions="Center" VerticalOptions="Center" Text="0" FontAttributes="Bold"/>
 
-                <Button FontFamily="raleway-boldf" x:Name="Menos" TextColor="White" BackgroundColor="#D38B1A" Margin="0,0,10,0" Text="-" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
+                <Button FontFamily="raleway-boldf" x:Name="Menos" Margin="0,0,10,0" Text="-" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
 
 
             </HorizontalStackLayout>
