--- a/Pages/Mochi.xaml
+++ b/Pages/Mochi.xaml
@@ -7,7 +7,7 @@
     <ScrollView>
     <!-- Definimos el color de fondo de nuestra pagina -->
 
-    <VerticalStackLayout Padding="5,5,5,5" BackgroundColor="#6A4512" >
+    <VerticalStackLayout Padding="5,5,5,5">
 
 
         <!-- Definimos la orientacion y el margin de nuestro VerticalStackLayout -->
@@ -16,16 +16,11 @@
 
             <HorizontalStackLayout>
 
-                <Button Clicked="RegeresoInicio_Clicked" FontFamily="raleway-boldf" x:Name="RegeresoInicio" TextColor="White" BackgroundColor="#D38B1A" Margin="10,10,10,10" Text="←" HeightRequest="50" WidthRequest="50" CornerRadius="60" FontAttributes="Bold" />
+                    <Button Clicked="RegeresoInicio_Clicked" x:Name="RegeresoInicio"  Margin="10,10,10,10" Text="↩"  FontSize="20" VerticalOptions="Center" CornerRadius="60" FontAttributes="Bold" />
 
+                    <!-- Agregamos un label y definimos su color,fuente,tamaño,su margen,orientacion, sus atributos, y su propiedad text -->
 
-                <!-- Agregamos nuestro logo y definimos su tamaño -->
-
-                <Image Source="logo.png" HeightRequest="90" WidthRequest="90"/>
-
-                <!-- Agregamos un label y definimos su color,fuente,tamaño,su margen,orientacion, sus atributos, y su propiedad text -->
-
-                <Label TextColor="#FFFFFF"  FontFamily="raleway-boldf" FontSize="30"  Margin="40,2,0,0" VerticalOptions="Center" HeightRequest="35" FontAttributes="Bold" Text="Mochi"/>
+                <Label FontSize="30"  Margin="40,2,0,0" VerticalOptions="Center" HeightRequest="35" FontAttributes="Bold" Text="Mochi"/>
 
             </HorizontalStackLayout>
 
@@ -48,13 +43,13 @@
 
             <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Margin="0,40,0,0">
 
-                <Button FontFamily="raleway-boldf" x:Name="Orden" TextColor="White" BackgroundColor="#D38B1A" Margin="10,10,10,10" Text="AGREGAR A LA ORDEN" HeightRequest="45" WidthRequest="190" CornerRadius="30"/>
-
-                <Button FontFamily="raleway-boldf" x:Name="Mas" TextColor="White" BackgroundColor="#D38B1A" Margin="0,0,0,0" Text="+" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
-
-                <Label Margin="10,0,10,0" HorizontalOptions="Center" TextColor="#FFFFFF" VerticalOptions="Center" Text="0" FontAttributes="Bold"/>
-
-                <Button FontFamily="raleway-boldf" x:Name="Menos" TextColor="White" BackgroundColor="#D38B1A" Margin="0,0,10,0" Text="-" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
+                <Button FontFamily="raleway-boldf" x:Name="Orden"    Margin="10,10,10,10" Text="AGREGAR A LA ORDEN" HeightRequest="45" WidthRequest="190" CornerRadius="30"/>
+                                                                    
+                <Button FontFamily="raleway-boldf" x:Name="Mas"      Margin="0,0,0,0" Text="+" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
+                                                                    
+                <Label Margin="10,0,10,0" HorizontalOptions="Center" VerticalOptions="Center" Text="0" FontAttributes="Bold"/>
+                                                                    
+                <Button FontFamily="raleway-boldf" x:Name="Menos"    Margin="0,0,10,0" Text="-" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
 
 
             </HorizontalStackLayout>
