--- a/Pages/Pedido.xaml
+++ b/Pages/Pedido.xaml
@@ -15,27 +15,21 @@
     <VerticalStackLayout Padding="10,10,10,10">
         <!-- Definimos el padding del HorizontalStackLayou-->
 
-        <VerticalStackLayout HorizontalOptions="StartAndExpand" Margin="5,5,5,5">
+        <VerticalStackLayout HorizontalOptions="StartAndExpand">
 
             <HorizontalStackLayout>
 
-                <!-- Agregamos nuestro logo y definimos su tamaño -->
-
-                <Image Source="logo.png" HeightRequest="90" WidthRequest="90"/>
-
-                <!-- Agregamos un label y definimos su color,fuente,tamaño,su margen,orientacion, sus atributos, y su propiedad text -->
-
-                <Label TextColor="#FFFFFF"  FontFamily="raleway-boldf" FontSize="30"  Margin="5,2,0,0" VerticalOptions="Center" HeightRequest="35" FontAttributes="Bold" Text="Pedido"/>
+                <Label FontSize="40" VerticalOptions="Center" FontAttributes="Bold" Text="Pedido"/>
 
             </HorizontalStackLayout>
 
         </VerticalStackLayout>
 
-        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="1,1,1,10">
+        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="10,50,10,50">
 
-            <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
+           
 
-            <Label TextColor="#FFFFFF" FontSize="20" FontAttributes="Bold" Text="Estado actual de la orden" />
+            <Label FontSize="20" FontAttributes="Bold" Text="Estado actual de la orden" />
 
         </VerticalStackLayout>
 
@@ -43,48 +37,48 @@
         <HorizontalStackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
             <VerticalStackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
           
-                            <Grid VerticalOptions="CenterAndExpand" WidthRequest="450" HeightRequest="195" HorizontalOptions="CenterAndExpand">
+                            <Grid VerticalOptions="CenterAndExpand" WidthRequest="400" HeightRequest="195" HorizontalOptions="CenterAndExpand">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="Auto"/>
                                 </Grid.RowDefinitions>
-                <ListView ItemsSource="{Binding ListProducts}" HeightRequest="400"  VerticalOptions="CenterAndExpand" 
+                <ListView ItemsSource="{Binding ListProducts}" HeightRequest="400" 
                           HorizontalOptions="CenterAndExpand" SeparatorVisibility="Default"
-                                  SeparatorColor="#6A4512" Grid.Row="1">
+                                  Grid.Row="1">
                                     <ListView.Header>
-                        <Grid BackgroundColor="#D38B1A" HorizontalOptions="CenterAndExpand" ColumnSpacing="10" Padding="10"  VerticalOptions="CenterAndExpand">
+                        <Grid HorizontalOptions="CenterAndExpand" ColumnSpacing="5" VerticalOptions="CenterAndExpand">
                                             <Grid.ColumnDefinitions>
                                                
 
-                                                <ColumnDefinition Width="100"/>
-                                                <ColumnDefinition Width="100"/>
-                                                <ColumnDefinition Width="100"/>
-                                                <ColumnDefinition Width="100"/>
+                                                <ColumnDefinition Width="70"/>
+                                                <ColumnDefinition Width="70"/>
+                                                <ColumnDefinition Width="70"/>
+                                                <ColumnDefinition Width="70"/>
 
                                             </Grid.ColumnDefinitions>
-                                            <Label Text="PLATILLOS" TextColor="#FFFFFF"  VerticalOptions="Center" FontAttributes="Bold"  Grid.Column="0"/>
-                                            <Label Text="BEBIDAS" TextColor="#FFFFFF" FontAttributes="Bold"   VerticalOptions="Center" Grid.Column="1"/>
-                                            <Label Text="POSTRES" TextColor="#FFFFFF" FontAttributes="Bold"   VerticalOptions="Center" Grid.Column="2"/>
-                                            <Label Text="BOCADILLOS" TextColor="#FFFFFF" FontAttributes="Bold"  VerticalOptions="Center" Grid.Column="3"/>
+                                    <Label FontSize="10" Text="PLATILLOS"    VerticalOptions="Center" FontAttributes="Bold"  Grid.Column="0"/>
+                                    <Label FontSize="10" Text="BEBIDAS"     FontAttributes="Bold"   VerticalOptions="Center" Grid.Column="1"/>
+                                    <Label FontSize="10" Text="POSTRES"    FontAttributes="Bold"   VerticalOptions="Center" Grid.Column="2"/>
+                                    <Label FontSize="10" Text="BOCADILLOS"  FontAttributes="Bold"  VerticalOptions="Center" Grid.Column="3"/>
                                         </Grid>
                                     </ListView.Header>
                                     <ListView.ItemTemplate>
                                         <DataTemplate>
                                             <ViewCell>
-                                <Grid Padding="10" BackgroundColor="#FFFFFF" ColumnSpacing="10" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
+                                <Grid ColumnSpacing="5" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
                                                     <Grid.RowDefinitions>
-                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="auto"/>
                                                     </Grid.RowDefinitions>
                                                     <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition Width="100"/>
-                                                         <ColumnDefinition Width="100"/>
-                                                        <ColumnDefinition Width="100"/>
-                                                         <ColumnDefinition Width="100"/>
+                                                        <ColumnDefinition Width="70"/>
+                                                         <ColumnDefinition Width="70"/>
+                                                        <ColumnDefinition Width="70"/>
+                                                         <ColumnDefinition Width="70"/>
                                                     </Grid.ColumnDefinitions>
-                                    <Label  Text="{Binding Platillos}" TextColor="#6A4512"  Grid.Column="0"/>
-                                                    <Label Text="{Binding Bebidas}" TextColor="#6A4512"  Grid.Column="1"/>
-                                                    <Label Text="{Binding Postres}" TextColor="#6A4512"  Grid.Column="2"/>
-                                                    <Label Text="{Binding Bocadillos}" TextColor="#6A4512"  Grid.Column="3"/>
+                                            <Label FontSize="10" Text="{Binding Platillos}"                 Grid.Column="0"/>
+                                                    <Label FontSize="10" Text="{Binding Bebidas}"    Grid.Column="1"/>
+                                            <Label FontSize="10" Text="{Binding Postres}"    Grid.Column="2"/>
+                                            <Label FontSize="10" Text="{Binding Bocadillos}" Grid.Column="3"/>
                                                 </Grid>
                                             </ViewCell>
                                         </DataTemplate>
@@ -100,11 +94,11 @@
 
             <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Margin="0,40,0,0">
 
-                <Button FontFamily="raleway-boldf" x:Name="Mas" TextColor="White" BackgroundColor="#D38B1A" Margin="0,0,0,0" Text="+" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
+                <Button FontFamily="raleway-boldf" x:Name="Mas"      Margin="0,0,0,0" Text="+" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
 
                 <Label Margin="10,0,10,0" HorizontalOptions="Center" VerticalOptions="Center" Text="0" FontAttributes="Bold"/>
 
-                <Button FontFamily="raleway-boldf" x:Name="Menos" TextColor="White" BackgroundColor="#D38B1A" Margin="0,0,10,0" Text="-" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
+                <Button FontFamily="raleway-boldf" x:Name="Menos"      Margin="0,0,10,0" Text="-" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
 
 
             </HorizontalStackLayout>
@@ -112,36 +106,36 @@
         </VerticalStackLayout>
 
         
-        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="0,20,0,20">
+        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="10,50,10,50">
 
             <HorizontalStackLayout>
             <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
 
-            <Label TextColor="#FFFFFF" FontSize="20" FontAttributes="Bold" Text="Rellene los campos" />
+            <Label  FontSize="20" FontAttributes="Bold" Text="Rellene los campos" />
 
 
             </HorizontalStackLayout>
         </VerticalStackLayout>
 
-        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="1,1,1,10" VerticalOptions="CenterAndExpand">
+        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="10,10,10,10" VerticalOptions="CenterAndExpand">
 
             <HorizontalStackLayout>
                 <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
 
-                <Label HorizontalTextAlignment="Start" TextColor="#FFFFFF" FontSize="20" FontAttributes="Bold" Margin="0,0,50,0" Text="Nombre:"  VerticalOptions="CenterAndExpand"/>
-                <Entry BackgroundColor="#D38B1A" Placeholder="Digite su nombre"  Margin="10,0,10,10"  x:Name="NombreCli" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" WidthRequest="200" HeightRequest="35" PlaceholderColor="White"/>
+                <Label HorizontalTextAlignment="Start" FontSize="15" FontAttributes="Bold" Margin="0,0,50,0" Text="Nombre:"  VerticalOptions="CenterAndExpand"/>
+                <Entry Placeholder="Digite su nombre"  Margin="0,0,10,10"  x:Name="NombreCli" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" WidthRequest="200" HeightRequest="35"/>
 
              
             </HorizontalStackLayout>
         </VerticalStackLayout>
-        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="0,1,1,0" VerticalOptions="CenterAndExpand">
+        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="10,10,10,10" VerticalOptions="CenterAndExpand">
 
             <HorizontalStackLayout>
                 <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
 
 
-                <Label  HorizontalTextAlignment="Start" VerticalOptions="CenterAndExpand" TextColor="#FFFFFF" FontSize="20" FontAttributes="Bold" Text="N° de tarjeta:"  />
-                <Entry  BackgroundColor="#D38B1A" HorizontalOptions="EndAndExpand" Margin="20,10,10,10"  Keyboard="Numeric" Placeholder="Tarjeta de credito" x:Name="Tarjeta" VerticalOptions="CenterAndExpand"  WidthRequest="200" HeightRequest="35" PlaceholderColor="White"/>
+                <Label  HorizontalTextAlignment="Start" VerticalOptions="CenterAndExpand" FontSize="15" FontAttributes="Bold" Text="N° de tarjeta:"  />
+                <Entry  HorizontalOptions="EndAndExpand" Margin="20,10,10,10"  Keyboard="Numeric" Placeholder="Tarjeta de credito" x:Name="Tarjeta" VerticalOptions="CenterAndExpand"  WidthRequest="200" HeightRequest="35" />
 
 
             </HorizontalStackLayout>
@@ -151,7 +145,7 @@
 
             <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Margin="0,40,0,0">
 
-                <Button FontFamily="raleway-boldf" x:Name="pedido" TextColor="White" BackgroundColor="#D38B1A" Margin="10,10,10,10" Text="REALIZAR ORDEN" FontAttributes="Bold" HeightRequest="45" WidthRequest="190" CornerRadius="30"/>
+                <Button x:Name="pedido" Margin="10,10,10,10" Text="REALIZAR ORDEN" FontAttributes="Bold" HeightRequest="45" WidthRequest="190" CornerRadius="30"/>
 
             </HorizontalStackLayout>
 
