--- a/Pages/Postre.xaml
+++ b/Pages/Postre.xaml
@@ -12,7 +12,7 @@
 
     <!-- Definimos el color de fondo de nuestra pagina -->
 
-    <VerticalStackLayout Padding="5,5,5,5" BackgroundColor="#6A4512" >
+    <VerticalStackLayout Padding="5,5,5,5">
 
         <!-- Definimos la orientacion y el margin de nuestro VerticalStackLayout -->
 
@@ -21,18 +21,13 @@
             <HorizontalStackLayout>
 
 
-                <Button Clicked="RegresoInicio_Clicked" FontFamily="raleway-boldf" x:Name="RegeresoInicio" TextColor="White" BackgroundColor="#D38B1A" Margin="10,10,10,10" Text="←" HeightRequest="50" WidthRequest="50" CornerRadius="60" FontAttributes="Bold" />
-
-
-                <!-- Agregamos nuestro logo y definimos su tamaño -->
-
-                <Image Source="logo.png" HeightRequest="90" WidthRequest="90"/>
+                <Button Clicked="RegresoInicio_Clicked" x:Name="RegeresoInicio" Margin="10,10,10,10" Text="↩"  FontSize="20" VerticalOptions="Center" CornerRadius="60" FontAttributes="Bold" />
 
                 <!-- Agregamos un label y definimos su color,fuente,tamaño,su margen,orientacion, sus atributos, y su propiedad text -->
 
-                <Label TextColor="#FFFFFF"  FontFamily="raleway-boldf" FontSize="30"  Margin="5,2,0,0" VerticalOptions="Center" HeightRequest="35" FontAttributes="Bold" Text="Postres"/>
+                    <Label FontSize="30" VerticalOptions="Center" FontAttributes="Bold" Text="Postres"/>
 
-            </HorizontalStackLayout>
+                </HorizontalStackLayout>
 
         </VerticalStackLayout>
 
@@ -42,7 +37,7 @@
 
             <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
 
-            <Label TextColor="#FFFFFF" FontSize="20" FontAttributes="Bold" Text="Frios" />
+            <Label FontSize="20" FontAttributes="Bold" Text="Frios" />
 
         </VerticalStackLayout>
 
@@ -76,13 +71,13 @@
 
             <HorizontalStackLayout>
 
-                <Label TextColor="#FFFFFF" FontSize="10" Text="Postre 1"  Margin="0,0,19,0" FontAttributes="Bold"/>
+                <Label FontSize="10" Text="Postre 1"  Margin="0,0,19,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="Postre 2"  Margin="36,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Postre 2"  Margin="36,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="Postre 3"  Margin="40,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Postre 3"  Margin="40,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="Postre 4"  Margin="55,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Postre 4"  Margin="55,0,0,0" FontAttributes="Bold"/>
 
             </HorizontalStackLayout>
 
@@ -92,21 +87,21 @@
 
             <HorizontalStackLayout>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
             </HorizontalStackLayout>
 
@@ -116,7 +111,7 @@
 
             <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
 
-            <Label TextColor="#FFFFFF" FontSize="20" FontAttributes="Bold" Text="Calientes" />
+            <Label FontSize="20" FontAttributes="Bold" Text="Calientes" />
 
         </VerticalStackLayout>
 
@@ -140,13 +135,13 @@
 
             <HorizontalStackLayout>
 
-                <Label TextColor="#FFFFFF"  FontSize="10" Text="Postre 1"  Margin="0,0,18,0" FontAttributes="Bold"/>
+                <Label FontSize="10" Text="Postre 1"  Margin="0,0,18,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Postre 2"  Margin="36,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Postre 2"  Margin="36,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Postre 3"  Margin="40,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Postre 3"  Margin="40,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Postre 4"  Margin="50,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Postre 4"  Margin="50,0,0,0" FontAttributes="Bold"/>
 
             </HorizontalStackLayout>
 
@@ -156,21 +151,21 @@
 
             <HorizontalStackLayout>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
-
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
+                       
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                       
+                <Label FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+                       
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                       
+                <Label FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+                       
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
+                       
+                <Label FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
+                       
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
             </HorizontalStackLayout>
 
@@ -180,7 +175,7 @@
 
             <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
 
-            <Label TextColor="#FFFFFF" FontSize="20" FontAttributes="Bold" Text="Dulces" />
+            <Label FontSize="20" FontAttributes="Bold" Text="Dulces" />
 
         </VerticalStackLayout>
 
@@ -204,13 +199,13 @@
 
             <HorizontalStackLayout>
 
-                <Label TextColor="#FFFFFF"  FontSize="10" Text="Postre 1"  Margin="0,0,18,0" FontAttributes="Bold"/>
+                <Label FontSize="10" Text="Postre 1"  Margin="0,0,18,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Postre 2"  Margin="36,0,0,0" FontAttributes="Bold" />
+                <Label FontSize="10"  Text="Postre 2"  Margin="36,0,0,0" FontAttributes="Bold" />
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Postre 3"  Margin="40,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Postre 3"  Margin="40,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Postre 4"  Margin="50,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="Postre 4"  Margin="50,0,0,0" FontAttributes="Bold"/>
 
             </HorizontalStackLayout>
 
@@ -220,21 +215,21 @@
 
             <HorizontalStackLayout>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
+                <Label FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
+                <Label FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
 
             </HorizontalStackLayout>
 
@@ -244,13 +239,13 @@
 
             <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Margin="0,40,0,0">
 
-                <Button FontFamily="raleway-boldf" x:Name="Orden" TextColor="White" BackgroundColor="#D38B1A" Margin="10,10,10,10" Text="AGREGAR A LA ORDEN" HeightRequest="45" WidthRequest="190" CornerRadius="30"/>
+                <Button FontFamily="raleway-boldf" x:Name="Orden"  Margin="10,10,10,10" Text="AGREGAR A LA ORDEN" HeightRequest="45" WidthRequest="190" CornerRadius="30"/>
 
-                <Button FontFamily="raleway-boldf" x:Name="Mas" TextColor="White" BackgroundColor="#D38B1A" Margin="0,0,0,0" Text="+" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
+                <Button FontFamily="raleway-boldf" x:Name="Mas"    Margin="0,0,0,0" Text="+" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
 
-                <Label Margin="10,0,10,0" HorizontalOptions="Center" VerticalOptions="Center"  TextColor="#FFFFFF" Text="0" FontAttributes="Bold"/>
+                <Label Margin="10,0,10,0" HorizontalOptions="Center" VerticalOptions="Center" Text="0" FontAttributes="Bold"/>
 
-                <Button FontFamily="raleway-boldf" x:Name="Menos" TextColor="White" BackgroundColor="#D38B1A" Margin="0,0,10,0" Text="-" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
+                <Button FontFamily="raleway-boldf" x:Name="Menos" Margin="0,0,10,0" Text="-" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
 
 
             </HorizontalStackLayout>
